salesforce_sfdx/main/default/objects/Competidor__c/Competidor__c.object-meta.xml
<CustomObject>
    <label>Competidor</label>
    <nameField>
        <label>Nombre de Competidor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competidores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>