salesforce_sfdx/main/default/objects/Competidor__c/fields/OSFMX_CompetitorOwnerName__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CompetitorOwnerName__c</fullName>
    <formula>OSFMX_Opportunity__r.Owner.FirstName+ OSFMX_Opportunity__r.Owner.LastName</formula>
    <label>Oportunidad propietario Usuario</label>
    <type>Text</type>
</CustomField>