salesforce_sfdx/main/default/objects/Competidor__c/fields/OSFMX_CompetitorRZ__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CompetitorRZ__c</fullName>
    <formula>OSFMX_Opportunity__r.Account.OSFMX_BusinessName__c</formula>
    <label>Oportunidad RZ</label>
    <type>Text</type>
</CustomField>