salesforce_sfdx/main/default/objects/Competidor__c/fields/OSFMX_EndDateContract__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_EndDateContract__c</fullName>
    <label>Fecha de terminación de contrato</label>
    <type>Date</type>
</CustomField>