salesforce_sfdx/main/default/objects/Competidor__c/fields/OSFMX_OpportunityOwner__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_OpportunityOwner__c</fullName>
    <formula>OSFMX_Opportunity__r.Owner.Username</formula>
    <label>Propietario Oportunidad</label>
    <type>Text</type>
</CustomField>