salesforce_sfdx/main/default/objects/Competidor__c/fields/OSFMX_StrengthPoints__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_StrengthPoints__c</fullName>
    <label>Puntos fuertes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>