salesforce_sfdx/main/default/objects/Competidor__c/fields/OSFMX_WeakPoints__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_WeakPoints__c</fullName>
    <label>Puntos débiles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>