salesforce_sfdx/main/default/objects/Competidor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>